--- a/index.html
+++ b/index.html
@@ -3,40 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1 >Personal Informa</h1>
-    <table>
-        <tr>
-            <td>
-             Name <input type="text" name >
-            </td>
-            <td>
-                Fthr Name <input type="text" name >
-            </td>
-            <td>
-                Phone No <input type="number" number > <br>
-            </td>
-        </tr>
-        <tr>
-           <br> <td>
-                Email <input type="email" name >
-            </td>
-            <td>
-                Password : <input type="password" name >
-            </td>
-            <td>
-             CNIC NO<input type="number"></td>
-        </tr>
-        <tr>
-           <td> <p>Address</p> 
-            <textarea cols="25" rows="5"></textarea> </td>
-        </tr>
-        <tr>
-            <td><input type="submit"></td>
-        </tr>
-    </table>
+    <div class="nav">
+        <nav>
+            <h1>SAYLANI WELFARE</h1>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">SERVICE</a></li>
+            <li><a href="#">ABOUT</a></li>
+        </ul>
+        </nav>
+    </div>
+    <div class="parent">
+        <div class="class1">
+            <h1>
+                WELL COME TO THE <br> SAYLANI WELFARE
+            </h1>
+            <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, aperiam, vel, sunt odit quidem et officiis sapiente corporis recusandae inventore distinctio quas repudiandae. At fugiat consectetur a, sint dignissimos assumenda.</P>
+        <button>Explore more</button>
+        </div>
+        <div class="CLASS2">
+            <img src="image/image saylani.png" width="400" height="400" >
+        </div>
+
+    </div>
 </body>
 </html>
